@@ -9,7 +9,7 @@ public class UseCaseTracer {
             UseCase uc = m.getAnnotation(UseCase.class);
             if(uc != null) {
                 System.out.println("Found Use Case: " + uc.id() + " " + uc.description());
-                useCases.remove(new Integer(uc.id()));
+                useCases.remove(Integer.valueOf(uc.id()));
             }
         }
         for (int i : useCases) {
